--- a/src/pages/gallery/gallery.scss
+++ b/src/pages/gallery/gallery.scss
@@ -4,7 +4,36 @@ h1 {
   color: $myColor;
 }
 
-.main-container{
-    border: 1px solid red;
-    max-width: 1920px;
+.main-container {
+  max-width: 1920px;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    border: 1px solid blue;
+    gap: 10px;
+    padding: 10px;
+
+    div {
+      border: 1px solid purple;
+      width: 150px;
+      height: 150px;
+      background-color: rgba(255, 58, 114, 0.703);
+      border-radius: 10px;
+    }
+
+    .item-a {
+      grid-row-start: 1;
+      grid-row-end: 3;
+      grid-column-start: 1;
+      grid-column-end: 3;
+      background-color: rgba(102, 245, 25, 0.703);
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
