--- a/src/pages/gallery/gallery.scss
+++ b/src/pages/gallery/gallery.scss
@@ -4,36 +4,42 @@ h1 {
   color: $myColor;
 }
 
-.main-container {
+.gallery {
   max-width: 1920px;
   display: flex;
   height: 100vh;
   justify-content: center;
   align-items: center;
-  .gallery {
+
+  .container {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(5, 200px);
+    grid-template-rows: repeat(3, 200px);
     border: 1px solid blue;
-    gap: 10px;
+    gap: 30px;
     padding: 10px;
 
-    div {
-      border: 1px solid purple;
-      width: 150px;
-      height: 150px;
-      background-color: rgba(255, 58, 114, 0.703);
+    .draggable {
+    //   cursor: pointer;
+      border: 1px solid red;
+      background-color: rgba(128, 0, 128, 0.4);
       border-radius: 10px;
+      height: 200px;
+      width: 200px;
     }
 
-    .item-a {
-      grid-row-start: 1;
-      grid-row-end: 3;
-      grid-column-start: 1;
-      grid-column-end: 3;
-      background-color: rgba(102, 245, 25, 0.703);
-      width: 100%;
-      height: 100%;
+    .item-1 {
+    grid-area: 1 / 1 / 3 / 3;
+    background-color: rgba(102, 245, 25, 0.703);
+    width: 100%;
+    height: 100%;
+    }
+    .draggable{
+        border: 1px solid red;
+    }
+
+    .dragging{
+        opacity: 0.1;
     }
   }
 }
