--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -24,37 +24,44 @@
   }
 }
 
-.characters {
+.products {
   list-style: none;
   padding-left: 0;
+  border: 1px solid red;
+  display: grid;
+  grid-template-columns: repeat(5, 200px);
+  grid-template-rows: repeat(3, 200px);
+  gap: 30px;
 }
 
-.characters li {
+
+.products li {
   display: flex;
   align-items: center;
   border: solid 2px #d0d0d0;
-  border-radius: .2em;
-  padding: .5em .8em .5em .5em;
-  margin-bottom: 1em;
+  border-radius: 10px;
 }
 
-.characters p {
+.products .item-0{
+  border: 5px solid blue;
+  grid-area: 1 / 1 / 3 / 3;
+}
+
+.products p {
   max-width: none;
   font-weight: bold;
   margin: 0;
 }
 
-.characters-thumb {
-  overflow: hidden;
-  flex-shrink: 0;
-  width: 2em;
-  height: 2em;
+.products-thumb {
+  border: 1px solid blue;
+  width: 100%;
+  height: 100%;
   background-color: #e8e8e8;
-  padding: .5em;
-  margin-right: .5em;
+
 }
 
-.characters-thumb img {
+.products-thumb img {
   display: block;
   width: 100%;
   height: auto;
