--- a/src/styles.css
+++ b/src/styles.css
@@ -6,35 +6,100 @@ picture {
 }
 
 main {
-    border: 1px solid red;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    background: rgb(193, 184, 184);
+    gap: 0 !important;
+    
+}
+
+
+.top-bar{
+    background-color: white;
+    width: 80%;
+}
+.container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 50px 1fr 1fr 1fr;
+    gap: 30px;
+    cursor: pointer;
+    background-color: white;
+    padding: 40px;
+    font-size: 25px;;
+}
+
+
+.item {
+    /* background: var(--bg-colour); */
+    border: 1px solid rgb(142, 147, 180);
+    box-shadow: 0px 4px 3px rgba(152, 139, 139, 0.1);
+    border-radius: 10px;
+    position: relative;
+    width: 100%;
+}
+
+.item img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.item .checkbox{
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    z-index: 1;
+    margin: 20px;
+    display: none;
+}
+
+
+.item:hover img{
+    mask-image: linear-gradient(to bottom, rgba(189, 35, 35, 0.5) 50%, rgba(241, 19, 19, 0.65) 50%);
+    -webkit-mask-image: linear-gradient(to bottom, rgba(173, 8, 8, 0.5) 50%, rgba(229, 21, 21, 0.65) 50%);
+}
+
+.item .active{
+    display: flex;
+}
+
+.item:hover .checkbox{
+    display: flex;
+}
+
+
+
+.top-left-bar{
+    grid-area: 1 / 1 / 1 / 4;
+    display: flex;
+    justify-content: left;
     align-items: center;
 }
 
-.container {
-    border: 1px solid blue;
-        display: grid;
-            grid-template-columns: repeat(5, 200px);
-            grid-template-rows: repeat(3, 200px);
-            gap: 2rem;
-            cursor: pointer;
-            padding: 1.5em 0;
-}
-
-div {
-    background: var(--bg-colour);
-    box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    border: 1px solid red;
+.top-right-bar {
+    grid-area: 1 / 4 / 1 / 6;
+    display: flex;
+    justify-content: right;
+    align-items: center;
 }
 
 .item-0 {
-    border: 2px solid blue;
-    grid-area: 1 / 1 / 3 / 3;
+    grid-area: 2 / 1 / 4 / 3;
 }
 
-.card img {
-    object-fit: cover;
-    border: 1px solid black;
+.add-images{
+    border: 1px solid rgb(142, 147, 180);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.add-images img{
+    width: 30px;
+    height: auto;
 }
