--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -1,68 +1,61 @@
-.Gallery {
-  text-align: center;
-}
-
-.Gallery-header {
+.main-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 1.5vmin);
-}
-
-.Gallery-link {
-  color: #61dafb;
-}
-
-@keyframes Gallery-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.products {
-  list-style: none;
-  padding-left: 0;
-  border: 1px solid red;
-  display: grid;
-  grid-template-columns: repeat(5, 200px);
-  grid-template-rows: repeat(3, 200px);
-  gap: 30px;
-}
-
-
-.products li {
-  display: flex;
   align-items: center;
-  border: solid 2px #d0d0d0;
+  /* background: rgb(193, 184, 184); */
+  gap: 0 !important;
+
+}
+
+.submain-container {
+  display: grid;
+  grid-template-columns: repeat(5, 150px);
+  grid-template-rows: 50px 150px 150px 150px;
+  gap: 30px;
+  cursor: pointer;
+  background-color: white;
+  padding: 40px;
+  font-size: 25px;
+  border-radius: 15px;
+}
+
+.top-bar {
+  background-color: white;
+  width: 80%;
+}
+
+.top-left-bar {
+  grid-area: 1 / 1 / 1 / 4;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  font-size: 20px;
+}
+
+.top-right-bar {
+  grid-area: 1 / 4 / 1 / 6;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  color: red;
+}
+
+.bottom-card {
+  border: 1px solid rgb(142, 147, 180);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   border-radius: 10px;
+  border-style: dotted;
 }
 
-.products .item-0{
-  border: 5px solid blue;
-  grid-area: 1 / 1 / 3 / 3;
+.bottom-card p{
+  font-size: 12px;
 }
 
-.products p {
-  max-width: none;
-  font-weight: bold;
-  margin: 0;
-}
-
-.products-thumb {
-  border: 1px solid blue;
-  width: 100%;
-  height: 100%;
-  background-color: #e8e8e8;
-
-}
-
-.products-thumb img {
-  display: block;
-  width: 100%;
+.bottom-card img {
+  width: 30px;
   height: auto;
 }
